# Limelight3-XNav

./: .gitignore  COLAB_GUIDE.md  LICENSE  OFFLINE_INSTALLATION_CHANGES.md  README.md  SOLUTION_SUMMARY.md  XNav_Colab_Build.ipynb  _codeql_detected_source_root
docs/: FIXES.md  build_instructions.md  build_iso.md  build_offline.md  manual.md  setup.md  troubleshooting.md  usage.md
roborio_library/: CMakeLists.txt
roborio_library/_codeql_build_dir/: cmake_install.cmake
roborio_library/docs/: README.md  nt_topics.md
roborio_library/include/: XNavLib.h
roborio_library/src/: XNavLib.cpp
system/config/: 70-limelight-ethernet.rules  default_config.json
system/scripts/: build_iso.sh  colab_build.sh  download_wheels.sh  expand_rootfs.sh  setup.sh  setup_network.sh  verify_iso.sh
system/services/: xnav-dashboard.service  xnav-expand-rootfs.service  xnav-firstboot.service  xnav-vision.service
vision_core/: requirements-pip.txt  requirements.txt
vision_core/src/: apriltag_detector.py  calibration.py  camera_manager.py  config_manager.py  fmap_loader.py  lights_manager.py  main.py  nt_publisher.py  pose_calculator.py  thermal_manager.py
vision_core_cpp/: .gitignore  CMakeLists.txt
vision_core_cpp/src/: apriltag_detector.cpp  apriltag_detector.hpp  calibration_manager.cpp  calibration_manager.hpp  camera_manager.cpp  camera_manager.hpp  config_manager.cpp  config_manager.hpp  fmap_loader.cpp  fmap_loader.hpp  lights_manager.cpp  lights_manager.hpp  main.cpp  nt_publisher.cpp  nt_publisher.hpp  pose_calculator.cpp  pose_calculator.hpp  thermal_manager.cpp  thermal_manager.hpp  web_server.cpp  web_server.hpp
vision_core_rs/: Cargo.toml
vision_core_rs/src/: calibration.rs  camera.rs  config.rs  detector.rs  fmap.rs  lib.rs  lights.rs  main.rs  nt_client.rs  pose.rs  thermal.rs  web.rs
web_dashboard/: app.py
web_dashboard/static/css/: style.css
web_dashboard/static/js/: app.js
web_dashboard/templates/: index.html
